<resources>

    <!--                App Configuration           -->
    <!--                Rest Server Data            -->
    <string name="REST_SERVER_URL">http://217.16.12.207</string>
    <string name="REST_SERVER_PORT">8080</string>

    <string name="REST_REQUEST_SALES">sales</string>
    <string name="REST_REQUEST_ARTICLES">articles</string>
    <string name="REST_REQUEST_LIGNES">lignes</string>
    <string name="REST_REQUEST_TIERS">tiers</string>
    <string name="REST_REQUEST_REPRESENTANT">representants</string>
    <string name="REST_REQUEST_GET">Get</string>
    <string name="REST_REQUEST_UPDATE">Update</string>


    <string name="REST_REQUEST_SERVER">server</string>
    <string name="REST_REQUEST_USER">user</string>
    <string name="REST_REQUEST_SALES_TEMPLATE">salestemplate</string>
    <string name="REST_FIELD_URL">url</string>
    <string name="REST_FIELD_DB_NAME">dbName</string>
    <string name="REST_FIELD_DB_USER">dbUser</string>
    <string name="REST_FIELD_DB_PASSWORD">dbPassword</string>
    <string name="REST_FIELD_DATE_FROM">dateFrom</string>
    <string name="REST_FIELD_DATE_TO">dateTo</string>
    <string name="REST_FIELD_USER">user</string>
    <string name="REST_FIELD_PASSWORD">password</string>

    <!--                App data                -->
    <integer name="db_local_version">3</integer>
    <string name="app_name">PLANÈTE <b>DASHBOARD</b></string>
    <string name="app_splash"><b>PLANÈTE\nDASHBOARD</b></string>
    <string name="activity_login">AUTHENTIFICATION</string>
    <string name="activity_settings">SETTINGS</string>
    <string name="current_currency">DZ</string>
    <string name="currency"><b>%1$s</b> %2$s</string>
    <string name="app_copyright">© 2018 <b>DSSI</b></string>
    <string name="sync_report_tables_error_connexion">Error : No internet connexion</string>
    <string name="sync_report_tables_updated">Updated : Documents,Articles,Lignes,Tiers,Representants</string>
    <string name="sync_report_tables_error_document">Error on : Documents</string>
    <string name="sync_report_tables_error_article">Error on : Articles</string>
    <string name="sync_report_tables_error_ligne">Error on : Lignes</string>
    <string name="sync_report_tables_error_tiers">Error on : Tiers</string>
    <string name="sync_report_tables_error_representant">Error on : Representants</string>



    <!--                    Menu                 -->
    <string name="menu_sales"><b>SALES</b></string>
    <string name="menu_stock"><b>STOCK</b></string>
    <string name="menu_purchase"><b>PURCHASES</b></string>
    <string name="menu_client"><b>CLIENTS</b></string>
    <string name="menu_provider"><b>PROVIDERS</b></string>
    <string name="menu_logout"><b>LOG OUT</b></string>
    <string name="menu_setting"><b>SETTINGS</b></string>
    <string name="menu_parameter"><b>PARAMETERS</b></string>
    <string name="menu_sync"><b>SYNC</b></string>


    <!--                   Chart               -->
    <string-array name="days_shors">
        <item name="sunday_short">SU</item>
        <item name="monday_short">MO</item>
        <item name="tuesday_short">TU</item>
        <item name="wednesday_short">WE</item>
        <item name="thursday_short">TH</item>
        <item name="friday_short">FR</item>
        <item name="saturday_short">SA</item>
    </string-array>


    <!--                    Tab Host            -->
    <string name="tab_day">DAY</string>
    <string name="tab_week">WEEK</string>
    <string name="tab_month">MONTH</string>
    <string name="tab_year">YEAR</string>


    <!--                Text Views                -->
    <string name="tv_today"><b>Today</b></string>
    <string name="tv_yesterday"><b>Yesterday</b></string>
    <string name="tv_quantity_sold">Qty.sold</string>
    <string name="tv_articles_number">No.invoice</string>
    <string name="tv_average_price">Avg.price</string>
    <string name="tv_configuration"><b>CONFIGURATION</b></string>
    <string name="tv_positive"><b>+</b></string>
    <string name="tv_negative"><b>-</b></string>

    <!--                Errors                     -->
    <string name="error_no_connexion">Please, check your internet connexion!</string>

    <!--                Edit Texts                -->
    <string name="et_user">User</string>
    <string name="et_password">Password</string>
    <string name="et_server">Server Name</string>
    <string name="et_database">Database Name</string>
    <string name="et_database_user">Database User</string>
    <string name="et_database_password">Database Password</string>

    <string name="et_user_helper">Enter the user name</string>
    <string name="et_password_helper">Enter the user password</string>
    <string name="et_server_helper">Enter the server name</string>
    <string name="et_database_helper">Enter the database name</string>

    <string name="et_error_not_empty">Field must not be empty</string>

    <!--                 Buttons                   -->
    <string name="btn_login"><b>Login</b></string>
    <string name="btn_connectivity_test"><b>Test connectivity</b></string>

    <!--            Progress                -->
    <string name="progress_login_title">Login</string>
    <string name="progress_server_title">Connecting to server</string>
    <string name="progress_updating_title">Refresh data</string>
    <string name="progress_calculating_title">Calculating</string>

    <string name="progress_login_content">Connecting ......</string>
    <string name="progress_server_content">Establishing Connection</string>
    <string name="progress_updating_content">It may takes sometime ......</string>
    <string name="progress_calculating_content">Applying datas ......</string>

    <!--           Shared Preferences       -->
    <string name="pref_title">Preferences</string>
    <string name="pref_title_sync">Synchronization</string>
    <string name="pref_title_server">Server Name</string>
    <string name="pref_title_database">Database Name</string>
    <string name="pref_title_database_user">Database User</string>
    <string name="pref_title_database_password">Database Password</string>
    <string name="pref_title_sync_auto">Auto sync</string>
    <string name="pref_title_sync_delay">Sync Delay (Minutes)</string>
    <string name="pref_title_last_sync">Last sync</string>
    <string name="pref_title_sync_report">Synchronization Report</string>

    <string name="pref_key">pref</string>
    <string name="pref_key_server">server</string>
    <string name="pref_key_database">database</string>
    <string name="pref_key_database_user">databaseUser</string>
    <string name="pref_key_database_password">databasePassword</string>
    <string name="pref_key_sync_auto">autoSync</string>
    <string name="pref_key_sync_delay">delay</string>
    <string name="pref_key_last_sync">lastSync</string>
    <string name="pref_key_connected">isConnected</string>
    <string name="pref_key_user">user</string>
    <string name="pref_key_password">password</string>
    <string name="pref_key_sync_report">syncReport</string>
    <string name="pref_key_update_job_id">UpdateJobId</string>


    <string name="pref_summary_server">The server containing the database</string>
    <string name="pref_summary_database">Name of the database containing the ERP</string>
    <string name="pref_summary_database_user">User of the database</string>
    <string name="pref_summary_database_password">User password of the database</string>
    <string name="pref_summary_sync_auto">Tell if the synchronization is automatically done</string>
    <string name="pref_summary_sync_delay">The frequency of syncing data from server</string>
    <string name="pref_summary_last_sync">Date &amp; time of the last sync</string>
    <string name="pref_summary_sync_report">Consult all database synchronizations report</string>

    <integer name="pref_default_sync_delay">15</integer>



    <!--                Dialogs             -->

    <string name="dialog_logout_title">Log out</string>
    <string name="dialog_filter_title">Filter by</string>

    <string name="dialog_logout_content">Do you want to log out?</string>
    <string name="dialog_filter_show"><b>Show</b></string>
    <string name="dialog_filter_family"><b>Family</b></string>

    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_all">Select All</string>
    

    <!--                Spinners            -->
    <string-array name="spinner_filter_array_show">
        <item>Label</item>
        <item>Id</item>
    </string-array>
    
    <string name="spinner_title_show">Show by</string>
    <string name="spinner_title_family">Family</string>
    

    <!--            Errors              -->
    <string name="error_login">Unable to login!</string>
    <string name="error_server">Unable to establish connexion with server!</string>
    <string name="error_connexion">There has been a problem connecting to the server!</string>

    <!--            Menus               -->
    <string name="filter_none">Filter: None</string>
    <string name="filter_item">Filter by Item</string>
    <string name="filter_client">Filter by Client</string>
    <string name="filter_representant">Filter by Representant</string>

</resources>
