<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_key"
    android:title="@string/pref_title">

    <PreferenceCategory android:title="@string/pref_title_sync">

        <EditTextPreference
            android:editable="false"
            android:focusable="false"
            android:key="@string/pref_key_last_sync"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_last_sync"
            android:title="@string/pref_title_last_sync" />

        <EditTextPreference
            android:inputType="textUri"
            android:key="@string/pref_key_server"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_server"
            android:title="@string/pref_title_server" />

        <EditTextPreference
            android:key="@string/pref_key_database"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_database"
            android:title="@string/pref_title_database" />

        <EditTextPreference
            android:key="@string/pref_key_database_user"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_database_user"
            android:title="@string/pref_title_database_user" />

        <EditTextPreference
            android:key="@string/pref_key_database_password"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            android:singleLine="true"
            android:summary="@string/pref_summary_database_password"
            android:title="@string/pref_title_database_password" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_sync_auto"
            android:summary="@string/pref_summary_sync_auto"
            android:title="@string/pref_title_sync_auto"
            android:widgetLayout="@layout/mp_preference_switch" />

        <EditTextPreference
            android:defaultValue="@integer/pref_default_sync_delay"
            android:dependency="@string/pref_key_sync_auto"
            android:inputType="number"
            android:key="@string/pref_key_sync_delay"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_sync_delay"
            android:title="@string/pref_title_sync_delay" />


        <EditTextPreference
            android:editable="false"
            android:focusable="false"
            android:key="@string/pref_key_sync_report"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:summary="@string/pref_summary_sync_report"
            android:title="@string/pref_title_sync_report" />
    </PreferenceCategory>

</PreferenceScreen>