<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/login_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBackgroundSecondary"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:elevation="2dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_copyright"
        android:textColor="@color/colorPrimary" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:elevation="2dp"
        android:clipToPadding="false"
        android:layout_gravity="center"
        android:outlineProvider="bounds"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@color/colorTextPrimary"
            android:background="@color/colorPrimary"
            android:text="@string/tv_configuration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/colorBackgroundSecondary"
            android:orientation="vertical">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes

                android:id="@+id/field_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/et_server"
                app:secondaryColor="@color/colorPrimary"
                app:primaryColor="@color/colorPrimary"
                app:errorColor="@color/colorError"
                android:layout_marginBottom="10dp"
                app:panelBackgroundColor="@color/colorTextPrimary"
                app:hasClearButton="true"
                app:enabled="true"
                >

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/et_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/field_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/et_database"
                app:secondaryColor="@color/colorPrimary"
                app:primaryColor="@color/colorPrimary"
                app:errorColor="@color/colorError"
                android:layout_marginBottom="10dp"
                app:panelBackgroundColor="@color/colorTextPrimary"
                app:hasClearButton="true"
                app:enabled="true"
                >

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/et_database"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btn_connectivity_test"
                android:layout_width="match_parent"
                app:mrl_rippleHover="true"
                app:mrl_rippleBackground="@color/colorPrimary"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:enabled="true"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_connectivity_test"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center"/>

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</RelativeLayout>