<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btn_sales"
                android:layout_width="match_parent"
                app:mrl_rippleHover="true"
                android:padding="20dp"
                app:mrl_rippleRoundedCorners="2dp"
                app:mrl_rippleBackground="@color/colorPrimary"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img_sales"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/ic_menu_gallery" />
                    <TextView
                        android:paddingLeft="30dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:enabled="true"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_sales"
                        android:textColor="@color/colorTextPrimary"
                        android:layout_gravity="center"/>
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                app:mrl_rippleHover="true"
                android:padding="20dp"
                app:mrl_rippleRoundedCorners="2dp"
                app:mrl_rippleBackground="@color/colorPrimary"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img_stock"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/ic_menu_gallery" />
                    <TextView
                        android:paddingLeft="30dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:enabled="true"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_stock"
                        android:textColor="@color/colorTextPrimary"
                        android:layout_gravity="center"/>
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    app:mrl_rippleHover="true"
                    android:padding="20dp"
                    app:mrl_rippleRoundedCorners="2dp"
                    app:mrl_rippleBackground="@color/colorPrimary"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:id="@+id/img_purchase"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_menu_gallery" />
                        <TextView
                            android:paddingLeft="30dp"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:enabled="true"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_purchase"
                            android:textColor="@color/colorTextPrimary"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    app:mrl_rippleHover="true"
                    android:padding="20dp"
                    app:mrl_rippleRoundedCorners="2dp"
                    app:mrl_rippleBackground="@color/colorPrimary"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:id="@+id/img_client"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_menu_gallery" />
                        <TextView
                            android:paddingLeft="30dp"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:enabled="true"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_client"
                            android:textColor="@color/colorTextPrimary"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_providers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    app:mrl_rippleHover="true"
                    android:padding="20dp"
                    app:mrl_rippleRoundedCorners="2dp"
                    app:mrl_rippleBackground="@color/colorPrimary"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:id="@+id/img_providers"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_menu_gallery" />
                        <TextView
                            android:paddingLeft="30dp"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:enabled="true"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_provider"
                            android:textColor="@color/colorTextPrimary"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>